fix .advices-techs icons wrapping

--- a/src/sass/partials/_speakers.scss
+++ b/src/sass/partials/_speakers.scss
@@ -275,5 +275,9 @@
 			height: 30px;
 		}
 
+		.advices-techs{
+			flex: 0 0;
+		}
+
 	}
 }
